Implementação de filtragem de aluguéis
    - Modificação em AlugueisRestController.java: adicionados parâmetros dataAluguel e modeloCarro no endpoint GET.
    - Atualização em ListarAlugueisQuery.java: novo método execute com filtros dataAluguel e modeloCarro usando Specification.
    - Criação de AluguelSpecifications.java: especificações JPA para filtrar por data de aluguel e modelo de carro.
    - Alteração em AluguelRepository.java: adicionada interface JpaSpecificationExecutor para suportar especificações.
    - Motivo: Permitir listagem de aluguéis com filtros dinâmicos no backend.